--- a/evaluation.ipynb
+++ b/evaluation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,11 +47,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_part_metrics(df: pl.DataFrame, threshold=0.2) -> dict:\n",
+    "def get_part_metrics(df: pl.DataFrame, threshold=0.3) -> dict:\n",
     "    df = df.with_columns((df[\"preds\"] > threshold).alias(\"preds_bin\"))\n",
     "    metrics = {}\n",
     "    # binary metrics using the threshold\n",
@@ -66,13 +66,13 @@
     "    return metrics\n",
     "\n",
     "\n",
-    "def get_all_metrics(df: pl.DataFrame) -> pd.DataFrame:\n",
+    "def get_all_metrics(df: pl.DataFrame, threshold=0.3) -> pd.DataFrame:\n",
     "    groups = [list(range(5)), [0, 1], [0, 4], [0, 2], [0, 3]]\n",
     "    group_names = [\"all\", \"StableDiffusion\", \"Midjourney\", \"Dalle2\", \"Dalle3\"]\n",
     "    all_metrics = []\n",
     "    for i, g in enumerate(groups):\n",
     "        subset = df.filter(pl.col(\"domains\").is_in(g))\n",
-    "        metrics = get_part_metrics(subset)\n",
+    "        metrics = get_part_metrics(subset, threshold=threshold)\n",
     "        metrics[\"group\"] = group_names[i]\n",
     "        all_metrics.append(metrics)\n",
     "    \n",
@@ -81,11 +81,377 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pl.read_csv(\"outputs/preds-image-classifier-epoch=08-val_loss=0.17.ckpt.csv\")"
+    "df1 = pl.read_csv(\"outputs/preds-image-classifier-1.csv\")\n",
+    "metrics_df1 = get_all_metrics(df1, threshold=0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>accuracy</th>\n",
+       "      <th>precision</th>\n",
+       "      <th>recall</th>\n",
+       "      <th>f1</th>\n",
+       "      <th>pf1</th>\n",
+       "      <th>roc_auc</th>\n",
+       "      <th>group</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.922883</td>\n",
+       "      <td>0.905793</td>\n",
+       "      <td>0.885671</td>\n",
+       "      <td>0.895619</td>\n",
+       "      <td>0.862582</td>\n",
+       "      <td>0.978179</td>\n",
+       "      <td>all</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.942132</td>\n",
+       "      <td>0.763441</td>\n",
+       "      <td>0.926759</td>\n",
+       "      <td>0.837209</td>\n",
+       "      <td>0.796860</td>\n",
+       "      <td>0.985916</td>\n",
+       "      <td>StableDiffusion</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.939611</td>\n",
+       "      <td>0.751802</td>\n",
+       "      <td>0.909746</td>\n",
+       "      <td>0.823267</td>\n",
+       "      <td>0.774240</td>\n",
+       "      <td>0.981999</td>\n",
+       "      <td>Midjourney</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.931319</td>\n",
+       "      <td>0.636029</td>\n",
+       "      <td>0.814597</td>\n",
+       "      <td>0.714323</td>\n",
+       "      <td>0.648632</td>\n",
+       "      <td>0.965689</td>\n",
+       "      <td>Dalle2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.935942</td>\n",
+       "      <td>0.617021</td>\n",
+       "      <td>0.848404</td>\n",
+       "      <td>0.714446</td>\n",
+       "      <td>0.651111</td>\n",
+       "      <td>0.971403</td>\n",
+       "      <td>Dalle3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   accuracy  precision    recall        f1       pf1   roc_auc  \\\n",
+       "0  0.922883   0.905793  0.885671  0.895619  0.862582  0.978179   \n",
+       "1  0.942132   0.763441  0.926759  0.837209  0.796860  0.985916   \n",
+       "2  0.939611   0.751802  0.909746  0.823267  0.774240  0.981999   \n",
+       "3  0.931319   0.636029  0.814597  0.714323  0.648632  0.965689   \n",
+       "4  0.935942   0.617021  0.848404  0.714446  0.651111  0.971403   \n",
+       "\n",
+       "             group  \n",
+       "0              all  \n",
+       "1  StableDiffusion  \n",
+       "2       Midjourney  \n",
+       "3           Dalle2  \n",
+       "4           Dalle3  "
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "metrics_df1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df14 = pl.read_csv(\"outputs/preds-image-classifier-14.csv\")\n",
+    "metrics_df14 = get_all_metrics(df14, threshold=0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>accuracy</th>\n",
+       "      <th>precision</th>\n",
+       "      <th>recall</th>\n",
+       "      <th>f1</th>\n",
+       "      <th>pf1</th>\n",
+       "      <th>roc_auc</th>\n",
+       "      <th>group</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.928488</td>\n",
+       "      <td>0.857466</td>\n",
+       "      <td>0.969760</td>\n",
+       "      <td>0.910163</td>\n",
+       "      <td>0.885374</td>\n",
+       "      <td>0.987696</td>\n",
+       "      <td>all</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.913780</td>\n",
+       "      <td>0.657693</td>\n",
+       "      <td>0.965555</td>\n",
+       "      <td>0.782430</td>\n",
+       "      <td>0.741327</td>\n",
+       "      <td>0.986172</td>\n",
+       "      <td>StableDiffusion</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.916393</td>\n",
+       "      <td>0.652021</td>\n",
+       "      <td>0.984831</td>\n",
+       "      <td>0.784592</td>\n",
+       "      <td>0.748441</td>\n",
+       "      <td>0.992818</td>\n",
+       "      <td>Midjourney</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.908425</td>\n",
+       "      <td>0.537229</td>\n",
+       "      <td>0.947028</td>\n",
+       "      <td>0.685556</td>\n",
+       "      <td>0.635053</td>\n",
+       "      <td>0.980448</td>\n",
+       "      <td>Dalle2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.910758</td>\n",
+       "      <td>0.514536</td>\n",
+       "      <td>0.976729</td>\n",
+       "      <td>0.674008</td>\n",
+       "      <td>0.627171</td>\n",
+       "      <td>0.989697</td>\n",
+       "      <td>Dalle3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   accuracy  precision    recall        f1       pf1   roc_auc  \\\n",
+       "0  0.928488   0.857466  0.969760  0.910163  0.885374  0.987696   \n",
+       "1  0.913780   0.657693  0.965555  0.782430  0.741327  0.986172   \n",
+       "2  0.916393   0.652021  0.984831  0.784592  0.748441  0.992818   \n",
+       "3  0.908425   0.537229  0.947028  0.685556  0.635053  0.980448   \n",
+       "4  0.910758   0.514536  0.976729  0.674008  0.627171  0.989697   \n",
+       "\n",
+       "             group  \n",
+       "0              all  \n",
+       "1  StableDiffusion  \n",
+       "2       Midjourney  \n",
+       "3           Dalle2  \n",
+       "4           Dalle3  "
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "metrics_df14"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df142 = pl.read_csv(\"outputs/preds-image-classifier-142.csv\")\n",
+    "metrics_df142 = get_all_metrics(df142, threshold=0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>accuracy</th>\n",
+       "      <th>precision</th>\n",
+       "      <th>recall</th>\n",
+       "      <th>f1</th>\n",
+       "      <th>pf1</th>\n",
+       "      <th>roc_auc</th>\n",
+       "      <th>group</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.943042</td>\n",
+       "      <td>0.896420</td>\n",
+       "      <td>0.958246</td>\n",
+       "      <td>0.926303</td>\n",
+       "      <td>0.901785</td>\n",
+       "      <td>0.988109</td>\n",
+       "      <td>all</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.935379</td>\n",
+       "      <td>0.731982</td>\n",
+       "      <td>0.942712</td>\n",
+       "      <td>0.824089</td>\n",
+       "      <td>0.780422</td>\n",
+       "      <td>0.985460</td>\n",
+       "      <td>StableDiffusion</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.939083</td>\n",
+       "      <td>0.728155</td>\n",
+       "      <td>0.967008</td>\n",
+       "      <td>0.830754</td>\n",
+       "      <td>0.788624</td>\n",
+       "      <td>0.990542</td>\n",
+       "      <td>Midjourney</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.936965</td>\n",
+       "      <td>0.632006</td>\n",
+       "      <td>0.962331</td>\n",
+       "      <td>0.762949</td>\n",
+       "      <td>0.705979</td>\n",
+       "      <td>0.987440</td>\n",
+       "      <td>Dalle2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.937072</td>\n",
+       "      <td>0.604323</td>\n",
+       "      <td>0.966755</td>\n",
+       "      <td>0.743734</td>\n",
+       "      <td>0.687148</td>\n",
+       "      <td>0.989456</td>\n",
+       "      <td>Dalle3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   accuracy  precision    recall        f1       pf1   roc_auc  \\\n",
+       "0  0.943042   0.896420  0.958246  0.926303  0.901785  0.988109   \n",
+       "1  0.935379   0.731982  0.942712  0.824089  0.780422  0.985460   \n",
+       "2  0.939083   0.728155  0.967008  0.830754  0.788624  0.990542   \n",
+       "3  0.936965   0.632006  0.962331  0.762949  0.705979  0.987440   \n",
+       "4  0.937072   0.604323  0.966755  0.743734  0.687148  0.989456   \n",
+       "\n",
+       "             group  \n",
+       "0              all  \n",
+       "1  StableDiffusion  \n",
+       "2       Midjourney  \n",
+       "3           Dalle2  \n",
+       "4           Dalle3  "
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "metrics_df142"
    ]
   },
   {
@@ -94,7 +460,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "metrics_df = get_all_metrics(df)"
+    "df1423 = pl.read_csv(\"outputs/preds-image-classifier-1423.csv\")\n",
+    "metrics_df1423 = get_all_metrics(df1423, threshold=0.5)"
    ]
   },
   {
@@ -135,52 +502,52 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.903506</td>\n",
-       "      <td>0.940461</td>\n",
-       "      <td>0.791812</td>\n",
-       "      <td>0.859759</td>\n",
-       "      <td>0.736479</td>\n",
-       "      <td>0.976501</td>\n",
+       "      <td>0.935309</td>\n",
+       "      <td>0.867694</td>\n",
+       "      <td>0.975576</td>\n",
+       "      <td>0.918478</td>\n",
+       "      <td>0.888946</td>\n",
+       "      <td>0.987979</td>\n",
        "      <td>all</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.948827</td>\n",
-       "      <td>0.842758</td>\n",
-       "      <td>0.837563</td>\n",
-       "      <td>0.840153</td>\n",
-       "      <td>0.758147</td>\n",
-       "      <td>0.981971</td>\n",
+       "      <td>0.919369</td>\n",
+       "      <td>0.674637</td>\n",
+       "      <td>0.961566</td>\n",
+       "      <td>0.792944</td>\n",
+       "      <td>0.746404</td>\n",
+       "      <td>0.985404</td>\n",
        "      <td>StableDiffusion</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.949930</td>\n",
-       "      <td>0.837051</td>\n",
-       "      <td>0.839590</td>\n",
-       "      <td>0.838319</td>\n",
-       "      <td>0.744099</td>\n",
-       "      <td>0.981570</td>\n",
+       "      <td>0.922139</td>\n",
+       "      <td>0.669253</td>\n",
+       "      <td>0.981418</td>\n",
+       "      <td>0.795818</td>\n",
+       "      <td>0.748204</td>\n",
+       "      <td>0.989346</td>\n",
        "      <td>Midjourney</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.941308</td>\n",
-       "      <td>0.733127</td>\n",
-       "      <td>0.696881</td>\n",
-       "      <td>0.714544</td>\n",
-       "      <td>0.552597</td>\n",
-       "      <td>0.966459</td>\n",
+       "      <td>0.918600</td>\n",
+       "      <td>0.565705</td>\n",
+       "      <td>0.980577</td>\n",
+       "      <td>0.717485</td>\n",
+       "      <td>0.657445</td>\n",
+       "      <td>0.986546</td>\n",
        "      <td>Dalle2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.947560</td>\n",
-       "      <td>0.718485</td>\n",
-       "      <td>0.731383</td>\n",
-       "      <td>0.724876</td>\n",
-       "      <td>0.601624</td>\n",
-       "      <td>0.968926</td>\n",
+       "      <td>0.918294</td>\n",
+       "      <td>0.536762</td>\n",
+       "      <td>0.985372</td>\n",
+       "      <td>0.694959</td>\n",
+       "      <td>0.641829</td>\n",
+       "      <td>0.991926</td>\n",
        "      <td>Dalle3</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -189,11 +556,11 @@
       ],
       "text/plain": [
        "   accuracy  precision    recall        f1       pf1   roc_auc  \\\n",
-       "0  0.903506   0.940461  0.791812  0.859759  0.736479  0.976501   \n",
-       "1  0.948827   0.842758  0.837563  0.840153  0.758147  0.981971   \n",
-       "2  0.949930   0.837051  0.839590  0.838319  0.744099  0.981570   \n",
-       "3  0.941308   0.733127  0.696881  0.714544  0.552597  0.966459   \n",
-       "4  0.947560   0.718485  0.731383  0.724876  0.601624  0.968926   \n",
+       "0  0.935309   0.867694  0.975576  0.918478  0.888946  0.987979   \n",
+       "1  0.919369   0.674637  0.961566  0.792944  0.746404  0.985404   \n",
+       "2  0.922139   0.669253  0.981418  0.795818  0.748204  0.989346   \n",
+       "3  0.918600   0.565705  0.980577  0.717485  0.657445  0.986546   \n",
+       "4  0.918294   0.536762  0.985372  0.694959  0.641829  0.991926   \n",
        "\n",
        "             group  \n",
        "0              all  \n",
@@ -209,7 +576,7 @@
     }
    ],
    "source": [
-    "metrics_df"
+    "metrics_df1423"
    ]
   },
   {
